--- a/Hernan Raso/Java/Leccion 3/EjercicioCiclos03/nbproject/project.properties
+++ b/Hernan Raso/Java/Leccion 3/EjercicioCiclos03/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=EjercicioCiclos03
-main.class=
+main.class=Ciclos03.Ejercicio04
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
