Agregando la primera parte de la leccion 4 clases

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /Leandro Eugenio/programacion java 2023/leccion2/EjercicioCiclos08/build/
 /Leandro Eugenio/programacion java 2023/leccion2/EjericioCiclos09/nbproject/private/
 /Leandro Eugenio/programacion java 2023/leccion2/EjericioCiclos09/build/
+/Hernan Raso/Java/Leccion 4/Persona/nbproject/private/
+/Hernan Raso/Java/Leccion 4/LeccionClasesObjetos/nbproject/private/
+/Hernan Raso/Java/Leccion 4/LeccionClasesObjetos/build/
