clase 6 funciones, parte 2 en python

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,16 @@
 /Hernan Raso/Java/Leccion 4/Persona/nbproject/private/
 /Hernan Raso/Java/Leccion 4/LeccionClasesObjetos/nbproject/private/
 /Hernan Raso/Java/Leccion 4/LeccionClasesObjetos/build/
+/Leandro Eugenio/programacion java 2023/leccion2/ProyectoCaja/nbproject/private/
+/Leandro Eugenio/programacion java 2023/leccion2/ProyectoCaja/build/
+/Leandro Eugenio/programacion java 2023/leccion2/HolaMundo/nbproject/private/
+/Leandro Eugenio/programacion java 2023/leccion2/HolaMundo/build/
+/Leandro Eugenio/programacion java 2023/leccion2/EjercicioCiclos10/nbproject/private/
+/Leandro Eugenio/programacion java 2023/leccion2/EjercicioCiclos03/nbproject/private/
+/Leandro Eugenio/programacion java 2023/leccion2/EjerciciosCiclos03/nbproject/private/
+/Leandro Eugenio/programacion java 2023/leccion2/EjercicioCiclos03/build/
+/Leandro Eugenio/programacion java 2023/leccion2/JavaApplication30/nbproject/private/
+/Leandro Eugenio/programacion java 2023/leccion2/JavaApplication30/build/
+/Leandro Eugenio/programacion java 2023/leccion2/EjerciciocCiclos05/nbproject/private/
+/Leandro Eugenio/programacion java 2023/leccion2/EjerciciocCiclos05/build/
+/Leandro Eugenio/programacion java 2023/leccion2/EjercicioCiclos10/build/
