Paso de argumentos en java

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /Leandro Eugenio/programacion java 2023/leccion2/EjerciciocCiclos05/nbproject/private/
 /Leandro Eugenio/programacion java 2023/leccion2/EjerciciocCiclos05/build/
 /Leandro Eugenio/programacion java 2023/leccion2/EjercicioCiclos10/build/
+/Hernan Raso/Java/Leccion 4/Aritmetica/build/
