--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@
 /Leandro Eugenio/programacion java 2023/leccion2/EjerciciocCiclos05/build/
 /Leandro Eugenio/programacion java 2023/leccion2/EjercicioCiclos10/build/
 /Hernan Raso/Java/Leccion 4/Aritmetica/build/
+/Leandro Eugenio/programacion java 2023/leccion5/JavaApplication35/nbproject/private/
+/Leandro Eugenio/programacion java 2023/leccion5/Encapsulamiento/nbproject/private/
