--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /Leandro Eugenio/programacion java 2023/leccion2/EjerciciocCiclos05/build/
 /Leandro Eugenio/programacion java 2023/leccion2/EjercicioCiclos10/build/
 /Hernan Raso/Java/Leccion 4/Aritmetica/build/
+/Flor Carballo/Java/Leccion04/Aritméticas/build/
