--- a/Flor Carballo/Java/Leccion02/HolaMundo2/nbproject/project.properties
+++ b/Flor Carballo/Java/Leccion02/HolaMundo2/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/EjercicioCiclos08.jar
+dist.jar=${dist.dir}/HolaMundo2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/EjercicioCiclos08
+dist.jlink.output=${dist.jlink.dir}/HolaMundo2
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=EjercicioCiclos08
-main.class=
+jlink.launcher.name=HolaMundo2
+main.class=holamundo2.HolaMundo2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
