--- a/Flor Carballo/Java/Leccion03/LeccionClasesObjetos/nbproject/private/private.properties
+++ b/Flor Carballo/Java/Leccion03/LeccionClasesObjetos/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\WIN-10\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
+user.properties.file=C:\\Users\\popif\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
