--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 /Leandro Eugenio/programacion java 2023/leccion2/EjercicioCiclos10/build/
 /Hernan Raso/Java/Leccion 4/Aritmetica/build/
 /Flor Carballo/Java/Leccion04/Aritméticas/build/
+/Leandro Eugenio/programacion java 2023/leccion6/Herencia/nbproject/private/
+/Leandro Eugenio/programacion java 2023/leccion6/Herencia/build/
