clase 10 en programacion 2, Java

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@
 /Flor Carballo/Java/Leccion04/Aritméticas/build/
 /Leandro Eugenio/programacion java 2023/leccion6/Herencia/nbproject/private/
 /Leandro Eugenio/programacion java 2023/leccion6/Herencia/build/
+/Leandro Eugenio/programacion java 2023/leccion7/SobrecargaMetodos/nbproject/private/
+/Leandro Eugenio/programacion java 2023/leccion7/SobrecargaMetodos/build/
+/Leandro Eugenio/programacion java 2023/leccion7/Paquetes/nbproject/private/
+/Leandro Eugenio/programacion java 2023/leccion7/Paquetes/build/
+/Leandro Eugenio/programacion java 2023/leccion8/PalabraFinal/nbproject/private/
+/Leandro Eugenio/programacion java 2023/leccion8/PalabraFinal/build/
