Clase 11 Arreglos o Arrays

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,11 @@
 /Leandro Eugenio/programacion java 2023/leccion7/Paquetes/build/
 /Leandro Eugenio/programacion java 2023/leccion8/PalabraFinal/nbproject/private/
 /Leandro Eugenio/programacion java 2023/leccion8/PalabraFinal/build/
+/Leandro Eugenio/programacion java 2023/leccion9/Arreglos/nbproject/private/
+/Leandro Eugenio/programacion java 2023/leccion9/Arreglos/build/
+/Leandro Eugenio/programacion java 2023/leccion9/Arreglos_Ejercicio_1/nbproject/private/
+/Leandro Eugenio/programacion java 2023/leccion9/Arreglos_Ejercicio_1/build/
+/Leandro Eugenio/programacion java 2023/leccion9/Arreglos_ejercicios_2/nbproject/private/
+/Leandro Eugenio/programacion java 2023/leccion9/Arreglos_ejercicios_2/build/
+/Leandro Eugenio/programacion java 2023/leccion9/Arreglos_Ejercicio_3/nbproject/private/
+/Leandro Eugenio/programacion java 2023/leccion9/Arreglos_Ejercicio_3/build/
