Clase 12 Java y sus 3 ejercicios

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,12 @@
 /Leandro Eugenio/programacion java 2023/leccion9/Arreglos_ejercicios_2/build/
 /Leandro Eugenio/programacion java 2023/leccion9/Arreglos_Ejercicio_3/nbproject/private/
 /Leandro Eugenio/programacion java 2023/leccion9/Arreglos_Ejercicio_3/build/
+/German Castillo/Java/Clase9/Arreglos/nbproject/private/
+/German Castillo/Java/Clase10/Matrices/nbproject/private/
+/German Castillo/Java/Clase10/Matrices/build/
+/German Castillo/Java/Clase10/Matriz_Ejercicio_3/nbproject/private/
+/German Castillo/Java/Clase10/Matriz_Ejercicio_3/build/
+/German Castillo/Java/Clase10/Matriz_Ejercicio_4/nbproject/private/
+/German Castillo/Java/Clase10/Matriz_Ejercicio_4/build/
+/German Castillo/Java/Clase10/Matriz_Ejercicio_5/nbproject/private/
+/German Castillo/Java/Clase10/Matriz_Ejercicio_5/build/
