Clase 12 de Java
Commit de la clase 12 de Java: matrices y ejercicios

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,11 @@
 /Leandro Eugenio/programacion java 2023/leccion9/Arreglos_ejercicios_2/build/
 /Leandro Eugenio/programacion java 2023/leccion9/Arreglos_Ejercicio_3/nbproject/private/
 /Leandro Eugenio/programacion java 2023/leccion9/Arreglos_Ejercicio_3/build/
+/Flor Carballo/Java/Leccion10/Matrices/nbproject/private/
+/Flor Carballo/Java/Leccion10/Matrices/build/
+/Flor Carballo/Java/Leccion09/Matriz_Ejercicio_3/nbproject/private/
+/Flor Carballo/Java/Leccion09/Matriz_Ejercicio_3/build/
+/Flor Carballo/Java/Leccion09/Matriz_Ejercicio_4/nbproject/private/
+/Flor Carballo/Java/Leccion09/Matriz_Ejercicio_4/build/
+/Flor Carballo/Java/Leccion09/Matriz_Ejercicio_5/nbproject/private/
+/Flor Carballo/Java/Leccion09/Matriz_Ejercicio_5/build/
