Subiendo primera parte Leccion 12 Matrices

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@
 /Leandro Eugenio/programacion java 2023/Leccion10/Matriz_Ejercicio_5/nbproject/private/
 /Leandro Eugenio/programacion java 2023/Leccion10/Matriz_Ejercicio_3/build/
 /Leandro Eugenio/programacion java 2023/Leccion10/Matriz_Ejercicio_4/build/
+/Hernan Raso/Java/Leccion 12/Matrices/nbproject/private/
+/Hernan Raso/Java/Leccion 12/Matrices/build/
