Última clase de Java

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,23 @@
 /Hernan Raso/Java/Leccion 12/Matriz_Ejercicio_4/build/
 /Hernan Raso/Java/Leccion 12/Matriz_Ejercicio_5/nbproject/private/
 /Hernan Raso/Java/Leccion 12/Matriz_Ejercicio_5/build/
+/Flor Carballo/Java/Leccion11/Ventas/nbproject/private/
+/Flor Carballo/Java/Leccion11/Ventas/build/
+/Flor Carballo/Java/Leccion09/Arreglos_Ejercicio_4/nbproject/private/
+/Flor Carballo/Java/Leccion09/Arreglos_Ejercicio_4/build/
+/Flor Carballo/Java/Leccion09/Arreglos_Ejercicio_5/nbproject/private/
+/Flor Carballo/Java/Leccion09/Arreglos_Ejercicio_5/build/
+/Flor Carballo/Java/Leccion09/Arreglos_Ejercicio_11/nbproject/private/
+/Flor Carballo/Java/Leccion09/Arreglos_Ejercicio_11/build/
+/Flor Carballo/Java/Leccion09/Arreglos_Ejercicio_12/nbproject/private/
+/Flor Carballo/Java/Leccion09/Arreglos_Ejercicio_12/build/
+/Flor Carballo/Java/Leccion09/Arreglos_Ejercicio_13/nbproject/private/
+/Flor Carballo/Java/Leccion09/Arreglos_Ejercicio_13/build/
+/Flor Carballo/Java/Leccion09/Arreglos_Ejercicio_14/nbproject/private/
+/Flor Carballo/Java/Leccion09/Arreglos_Ejercicio_14/build/
+/Flor Carballo/Java/Leccion09/Arreglos_Ejercicio_15/nbproject/private/
+/Flor Carballo/Java/Leccion09/Arreglos_Ejercicio_15/build/
+/Flor Carballo/Java/Leccion10/Matriz_Ejercicio_6/nbproject/private/
+/Flor Carballo/Java/Leccion10/Matriz_Ejercicio_6/build/
+/Flor Carballo/Java/Leccion10/Matriz_Ejercicio_7/nbproject/private/
+/Flor Carballo/Java/Leccion10/Matriz_Ejercicio_7/build/
